Сделал поиск по title, Сделал загрузку фотографии из галереии, сохранение и  удаление по долгому нажатию с сохранением placeholder, Сделал OnBoard что-бы показывался один раз, и  закруглил автарку

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -15,8 +15,11 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.NoteApp.PopupOverlay" />
+            android:background="@color/toolBar"
+            app:popupTheme="@style/Theme.NoteApp.PopupOverlay" >
+
+
+        </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
