--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/black1"
     tools:context=".ui.home.HomeFragment">
+
     <EditText
         android:id="@+id/edit_search"
         android:layout_marginTop="16dp"
@@ -23,8 +24,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_home_fragment"
         app:layout_constraintTop_toBottomOf="@id/edit_search"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
