--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,38 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="textSize16">16sp</dimen>
+    <dimen name="Size18">18sp</dimen>
+    <dimen name="Size287">287dp</dimen>
+    <dimen name="Size264">264dp</dimen>
+    <dimen name="Size226">226dp</dimen>
+    <dimen name="Size24">24dp</dimen>
+    <dimen name="Size40">40dp</dimen>
+    <dimen name="Size19">19dp</dimen>
+    <dimen name="Size17">17dp</dimen>
+    <dimen name="Size28">28dp</dimen>
+    <dimen name="Size50">50dp</dimen>
+    <dimen name="Size20">20dp</dimen>
+    <dimen name="Size303">30dp</dimen>
+    <dimen name="Size8">8dp</dimen>
+    <dimen name="Size15">15sp</dimen>
+    <dimen name="Size24">24dp</dimen>
+    <dimen name="Size53">53dp</dimen>
+    <dimen name="Size23">23dp</dimen>
+    <dimen name="Size20">20dp</dimen>
+    <dimen name="Size80">80dp</dimen>
+    <dimen name="Size45">45dp</dimen>
+    <dimen name="Size30">30dp</dimen>
+    <dimen name="Size44">44dp</dimen>
+    <dimen name="Size93">93dp</dimen>
+    <dimen name="Size23">23dp</dimen>
+    <dimen name="Size25">25dp</dimen>
+    <dimen name="Size59">59dp</dimen>
+    <dimen name="Size42">42dp</dimen>
+    <dimen name="Size107">107dp</dimen>
+    <dimen name="Size130">130dp</dimen>
+    <dimen name="Size16">16dp</dimen>
+    <dimen name="Size4">4dp</dimen>
+    <dimen name="Size2">2dp</dimen>
+    <dimen name="Size82">82dp</dimen>
+    <dimen name="Size5">5dp</dimen>
 </resources>
