--- a/app/src/main/res/drawable/oval_btn_crimson.xml
+++ b/app/src/main/res/drawable/oval_btn_crimson.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="rectangle"  >
             <corners android:radius="16dip"/>
-            <solid android:color="@color/black2"/>
+            <solid android:color="@color/crimson"/>
         </shape>
     </item>
 </selector>
