--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,17 +9,20 @@
 
     <EditText
         android:id="@+id/edit_search"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/textSize16"
+        android:textColor="@color/grey1"
+        android:textSize="@dimen/Size18"
         android:drawableLeft="@drawable/ic_baseline_search_24"
-        android:paddingStart="19dp"
+        android:paddingStart="@dimen/Size19"
+        android:drawablePadding="@dimen/Size17"
         android:hint="@string/search"
         android:textColorHint="@color/grey4"
-        android:layout_marginHorizontal="28dp"
+        android:layout_marginHorizontal="@dimen/Size28"
         android:background="@drawable/oval3"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="40dp"/>
+        android:layout_height="@dimen/Size40"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_home_fragment"
