--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -8,44 +8,138 @@
     android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.note.NoteFragment">
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/relativelayout"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="@dimen/Size50">
+
+                <ImageView
+                    android:id="@+id/image_back"
+                    android:src="@drawable/shape"
+                    android:layout_marginStart="@dimen/Size20"
+                    android:layout_marginTop="@dimen/Size18"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/txt_data"
+                    android:layout_marginStart="@dimen/Size303"
+                    app:layout_constraintTop_toTopOf="@id/image_back"
+                    app:layout_constraintStart_toEndOf="@id/image_back"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/textSize16"
+                    android:textColor="@color/grey1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/txt_time"
+                    android:layout_marginStart="@dimen/Size8"
+                    app:layout_constraintBottom_toBottomOf="@id/txt_data"
+                    app:layout_constraintStart_toEndOf="@id/txt_data"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/textSize16"
+                    android:textColor="@color/grey1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
 
                 <TextView
                     android:id="@+id/txt_ready"
                     android:text="@string/ready"
                     android:textColor="@color/gold"
-                    android:textSize="15sp"
+                    android:textSize="@dimen/Size15"
                     android:textStyle="bold"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginEnd="24dp"
-                    android:layout_marginTop="18dp"
-                    android:layout_width="53dp"
-                    android:layout_height="23dp"/>
-        </RelativeLayout>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginEnd="@dimen/Size24"
+                    android:layout_marginTop="@dimen/Size18"
+                    android:layout_width="@dimen/Size53"
+                    android:layout_height="@dimen/Size23"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
         <TextView
             android:id="@+id/txt_note"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginHorizontal="@dimen/Size20"
             android:text="@string/title"
             android:textColor="@color/grey"
-            android:textSize="12dp"
-            android:layout_marginTop="20dp"
+            android:textSize="@dimen/Size18"
+            android:layout_marginTop="@dimen/Size20"
             app:layout_constraintTop_toBottomOf="@id/relativelayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <EditText
             android:id="@+id/et_note"
-            android:layout_marginHorizontal="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:textColor="@color/grey"
-            android:textSize="12dp"
+            android:textColorHint="@color/grey5"
+            android:textSize="@dimen/Size18"
             app:layout_constraintTop_toBottomOf="@id/txt_note"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/l_l"
+            android:gravity="center_horizontal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="104dp"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+                <RadioGroup
+                    android:id="@+id/radio_group"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/btn_black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/oval"
+            android:layout_width="@dimen/Size80"
+            android:layout_height="@dimen/Size45"/>
+
+        <Button
+            android:id="@+id/btn_white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btn_black"
+            android:background="@drawable/oval_btn_white"
+            android:layout_marginHorizontal="@dimen/Size30"
+            android:layout_width="@dimen/Size80"
+            android:layout_height="@dimen/Size45"/>
+
+        <Button
+            android:id="@+id/btn_crimson"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btn_white"
+            android:background="@drawable/oval_btn_crimson"
+            android:layout_width="@dimen/Size80"
+            android:layout_height="@dimen/Size45"/>
+                </RadioGroup>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+
+
+
+        <ImageView
+            android:id="@+id/mic_off"
+            android:src="@drawable/mic_off"
+            app:layout_constraintTop_toBottomOf="@id/l_l"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf ="parent"
+            android:layout_marginBottom="@dimen/Size44"
+            android:layout_marginTop="@dimen/Size18"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
 
