--- a/app/src/main/res/layout/fragment_on_board.xml
+++ b/app/src/main/res/layout/fragment_on_board.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,27 +8,56 @@
     android:orientation="vertical"
     tools:context=".onBoard.OnBoardFragment">
 
+   <TextView
+       android:id="@+id/txt_skip"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       android:layout_width="@dimen/Size93"
+       android:layout_height="@dimen/Size23"
+       android:layout_marginTop="@dimen/Size25"
+       android:layout_marginEnd="@dimen/Size19"
+       android:text="@string/Skip"
+       android:textColor="@color/gold"
+       android:textSize="@dimen/Size15" />
+
 
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_on_board"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/txt_skip"
+       android:layout_marginTop="@dimen/Size59"
        android:layout_width="match_parent"
-       android:layout_height="match_parent"/>
+       android:layout_height="wrap_content"/>
 
-   <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
+   <TextView
+       android:id="@+id/txt_skip1"
+       android:layout_marginTop="@dimen/Size42"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+       android:text="@string/go"
+       android:textColor="@color/grey5"
+       android:textSize="@dimen/textSize16"
+       android:textAlignment="center"
+       android:textStyle="bold"
+       android:layout_marginBottom="@dimen/Size107"
+       android:layout_width="@dimen/Size130"
+       android:layout_height="@dimen/Size24"/>
+
+   <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        android:id="@+id/spring_dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:layout_centerInParent="true"
-       android:layout_alignParentBottom="true"
-       android:layout_marginBottom="82dp"
-       app:dampingRatio="0.5"
        app:dotsColor="@color/gold"
-       app:dotsStrokeColor="@color/gold"
-       app:dotsCornerRadius="2dp"
-       app:dotsSize="16dp"
-       app:dotsSpacing="7dp"
-       app:dotsStrokeWidth="2dp"
-       app:stiffness="300"
+       app:dotsCornerRadius="@dimen/Size8"
+       app:dotsSize="@dimen/Size16"
+       app:dotsSpacing="@dimen/Size4"
+       app:dotsStrokeWidth="@dimen/Size2"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+       android:layout_marginBottom="@dimen/Size82"
        />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
